2006-08-23  Phil Muldoon  <pmuldoon@redhat.com>

	* EventLogger.java (EventLogger): Turn off parent handlers.
	Increase Level capture scope.

2006-08-23  Mike Cvet  <mcvet@redhat.com>

	* EditObserverDialog.java (.buttonEvent): Temporarily removed
	some input-checking code.
	* ObserverItemsTable.java (apply): Ditto.
	* ObserverItemRow.java (apply): Ditto.

2006-08-23    <swagiaal@redhat.com>

	* ObserversDialog.java: Rname Dialog to FryskDialog.
	* ProgramObserverDialog.java: Ditto.
	* PickProcDialog.java: Ditto
	* EditObserverDialog.java: Inherets from FryskDialog now.

2006-08-22  Mike Cvet  <mcvet@redhat.com>

	* ObserverItemRow.java (apply): Fails when the input is blank 
	/and/ the LiasionItem doesn't require input. Fixes #3106.
	* LiaisonItem.java (needInfo): New int needInfo - a flag to
	determine whether or not input is needed by the LiaisonItem by
	the user.
	* actions/Action.java (Action): Initialized needInfo to 0.
	* filters/Filter.java: Applied GNU formatting.
	(Filter): Initialized needInfo to 1.
	* Combo.java: Applied GNU formatting.

2006-08-21    <swagiaal@redhat.com>

	* actions/NotifyUserAction.java: New file. Part of fix for ba 3064.
	* actions/ActionManager.java: Added NotifyUserAction template to
	generic actions. Part of fix for ba 3064..
	* TrayIcon.java: Added support for changing tooltip when setting
	animation. Part of fix for ba 3064.
	* actions/RunExternal.java: Added copying of execString to 
	copy constructor. Fix for bz 6058.

2006-08-18  Mike Cvet  <mcvet@redhat.com>

	* PIDColumnDialog.java (PIDColumnDialog): Added rows for PPID,
	State, and NICE fields.
	* SessionProcDataModel.java (statRead): Added reads from Stat's 
	PPID, State, and NICE fields.
	* SessionProcTreeView.java (mountProcModel): Added columns for the
	above fields.
	* actions/RunExternal.java (setArgument): Logs to the error log
	when there is a problem with the executable.
	
2006-08-18  Phil Muldoon <pmuldoon@redhat.com>
